--- a/.env
+++ b/.env
@@ -13,6 +13,9 @@ NODE_ENV=development
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=./uploads
 
+# Configuration Frontend
+FRONTEND_URL=https://tetris-revolution.vercel.app
+
 # Configuration email (optionnel pour la vérification)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
